--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ button {
 }
 
 .taskbar {
+  z-index: 454354;
   position: absolute;
   bottom: 0px;
   left: 0px;
@@ -104,6 +105,11 @@ button {
 
 .window textarea {
   font-size: 24px;
+}
+
+.window img {
+  max-width: 50vw;
+  max-height: 50vh;
 }
 
 .start {
